--- a/Scan_Ip_2D_spectra.ipynb
+++ b/Scan_Ip_2D_spectra.ipynb
@@ -22,7 +22,7 @@
     "%matplotlib widget\n",
     "from ipywidgets import Layout, interact\n",
     "import matplotlib.pyplot as plt\n",
-    "from RVutils import mydict, hdf5_to_dict, Fourier2D\n",
+    "from RVutils import *\n",
     "import numpy as np\n",
     "\n",
     "## Set up rc\n",
@@ -49,71 +49,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# q05_spectra = hdf5_to_dict(\"data/q05_growthrate_2Dspectra.hdf5\")\n",
-    "# q15_spectra = hdf5_to_dict(\"data/q15_growthrate_2Dspectra_aligned.hdf5\")\n",
-    "# print(q05_spectra.keys())\n",
-    "\n",
-    "## Create custom dictionnary class for spectra\n",
-    "class mydict2(dict):\n",
-    "    def __init__(self, *args, **kwargs):\n",
-    "        super(mydict2, self).__init__(*args, **kwargs)\n",
-    "        self.__dict__ = self\n",
-    "        \n",
-    "        self['Nphi'] = len(self['phig'])-1\n",
-    "        self['Ntheta'] = len(self['thetag'])-1\n",
-    "        self['Phithphisq'] = self['Phithphi']**2\n",
-    "\n",
-    "        ## Evolution of mn spectra\n",
-    "        tevol_TFPhi2D = np.zeros((len(self['time']),self['Nphi'],self['Ntheta']))\n",
-    "        for it in range(len(self['time'])):\n",
-    "            tevol_TFPhi2D[it,:,:] = np.abs(Fourier2D(self['Phithphisq'][it,0:self['Nphi']+1,0:self['Ntheta']+1],self['phig'],self['thetag'])[0])\n",
-    "        self['TFPhi2D'] = tevol_TFPhi2D\n",
-    "\n",
-    "        ## Coordinates in m,n space\n",
-    "        m2d,n2d = Fourier2D(self['Phithphisq'][-1,0:self['Nphi']+1,0:self['Ntheta']+1],self['phig'],self['thetag'])[1:]\n",
-    "        dm2d = (m2d[1]-m2d[0])//2 ; m2d = m2d#-dm2d\n",
-    "        dn2d = (n2d[1]-n2d[0])//2 ; n2d = n2d#-dn2d\n",
-    "        self['m2d'] = m2d \n",
-    "        self['n2d'] = n2d \n",
-    "        self['dm2d'] = dm2d\n",
-    "        self['dn2d'] = dn2d\n",
-    "\n",
-    "    def estimate_GRlin2D(self,tinit,tend):\n",
-    "        itinit = np.argmin(np.abs(self['time']-tinit))\n",
-    "        itend  = np.argmin(np.abs(self['time']-tend))\n",
-    "        Gammalin2D = np.log(self['TFPhi2D'][itend,:,:]/self['TFPhi2D'][itinit,:,:])/(tend-tinit)\n",
-    "        return Gammalin2D\n",
-    "\n",
-    "## end of mydict2\n",
-    "\n",
-    "def hdf5_to_dict2(filename, cls=mydict2):\n",
-    "    import h5py\n",
-    "    \"\"\"Load a dictionary of arrays and strings as unicode characters from an HDF5 file.\"\"\"\n",
-    "    with h5py.File(filename, 'r') as f:\n",
-    "        d = {}\n",
-    "        for k in f.keys():\n",
-    "            v = f[k][()]\n",
-    "            if isinstance(v, bytes):\n",
-    "                d[k] = v.decode('utf-8')\n",
-    "            else:\n",
-    "                d[k] = np.array(v)\n",
-    "    return cls(d)\n",
-    "\n",
-    "q05_spectra = hdf5_to_dict(\"data/q05_growthrate_2Dspectra.hdf5\",cls=mydict2)\n",
-    "q15_spectra = hdf5_to_dict(\"data/q15_growthrate_2Dspectra.hdf5\",cls=mydict2)\n",
-    "\n",
+    "q05_spectra = hdf5_to_dict(\"data/q05_growthrate_2Dspectra.hdf5\",cls=mydict_mnspectra)        ; q05_spectra['tGR_init'] = 19e3; q05_spectra['tGR_end'] = 25e3\n",
+    "q15_spectra = hdf5_to_dict(\"data/q15_growthrate_2Dspectra_aligned.hdf5\",cls=mydict_mnspectra); q15_spectra['tGR_init'] = 15e3; q15_spectra['tGR_end'] = 20e3"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color='green'>**Spectre 2D de $\\phi^2$** </font> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "qrpeak = 0.96\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "e:\\Git_tmp\\rvarennes_Scan_Ip\\RVutils.py:52: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  Gammalin2D = np.log(self['TFPhi2D'][itend,:,:]/self['TFPhi2D'][itinit,:,:])/(tend-tinit)\n",
+      "e:\\Git_tmp\\rvarennes_Scan_Ip\\RVutils.py:52: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  Gammalin2D = np.log(self['TFPhi2D'][itend,:,:]/self['TFPhi2D'][itinit,:,:])/(tend-tinit)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cf93a754c4e4424da6e2521e6faee560",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E:\\Temp\\ipykernel_9176\\3980685508.py:20: RuntimeWarning: divide by zero encountered in log10\n",
+      "  p1 = ax1.pcolormesh(m2d,n2d,np.log10(tevol_TFPhi2D[-30,:,:]),vmin=-16,vmax=0)\n",
+      "E:\\Temp\\ipykernel_9176\\3980685508.py:20: MatplotlibDeprecationWarning: shading='flat' when X and Y have the same dimensions as C is deprecated since 3.3.  Either specify the corners of the quadrilaterals with X and Y, or pass shading='auto', 'nearest' or 'gouraud', or set rcParams['pcolor.shading'].  This will become an error two minor releases later.\n",
+      "  p1 = ax1.pcolormesh(m2d,n2d,np.log10(tevol_TFPhi2D[-30,:,:]),vmin=-16,vmax=0)\n",
+      "E:\\Temp\\ipykernel_9176\\3980685508.py:44: MatplotlibDeprecationWarning: shading='flat' when X and Y have the same dimensions as C is deprecated since 3.3.  Either specify the corners of the quadrilaterals with X and Y, or pass shading='auto', 'nearest' or 'gouraud', or set rcParams['pcolor.shading'].  This will become an error two minor releases later.\n",
+      "  p3 = ax3.pcolormesh(m2d,n2d,Gammalin2D[:,:],vmin=0,vmax=4e-3)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "qrpeak = 2.87\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "e:\\Git_tmp\\rvarennes_Scan_Ip\\RVutils.py:52: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  Gammalin2D = np.log(self['TFPhi2D'][itend,:,:]/self['TFPhi2D'][itinit,:,:])/(tend-tinit)\n",
+      "e:\\Git_tmp\\rvarennes_Scan_Ip\\RVutils.py:52: RuntimeWarning: divide by zero encountered in log\n",
+      "  Gammalin2D = np.log(self['TFPhi2D'][itend,:,:]/self['TFPhi2D'][itinit,:,:])/(tend-tinit)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6eccf3e925be44608162b0c2bcf791f2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E:\\Temp\\ipykernel_9176\\3980685508.py:20: RuntimeWarning: divide by zero encountered in log10\n",
+      "  p1 = ax1.pcolormesh(m2d,n2d,np.log10(tevol_TFPhi2D[-30,:,:]),vmin=-16,vmax=0)\n",
+      "E:\\Temp\\ipykernel_9176\\3980685508.py:20: MatplotlibDeprecationWarning: shading='flat' when X and Y have the same dimensions as C is deprecated since 3.3.  Either specify the corners of the quadrilaterals with X and Y, or pass shading='auto', 'nearest' or 'gouraud', or set rcParams['pcolor.shading'].  This will become an error two minor releases later.\n",
+      "  p1 = ax1.pcolormesh(m2d,n2d,np.log10(tevol_TFPhi2D[-30,:,:]),vmin=-16,vmax=0)\n",
+      "E:\\Temp\\ipykernel_9176\\3980685508.py:44: MatplotlibDeprecationWarning: shading='flat' when X and Y have the same dimensions as C is deprecated since 3.3.  Either specify the corners of the quadrilaterals with X and Y, or pass shading='auto', 'nearest' or 'gouraud', or set rcParams['pcolor.shading'].  This will become an error two minor releases later.\n",
+      "  p3 = ax3.pcolormesh(m2d,n2d,Gammalin2D[:,:],vmin=0,vmax=4e-3)\n"
+     ]
+    }
+   ],
+   "source": [
     "for iq,q in enumerate([q05_spectra,q15_spectra]):\n",
     "    print('qrpeak = %.2f' % q['q_rpeak'])\n",
     "\n",
     "    tevol_TFPhi2D = q['TFPhi2D']\n",
-    "    m2d,n2d = q['m2d'],q['n2d']\n",
-    "    dm2d,dn2d = q['dm2d'],q['dn2d']\n",
-    "    Nphi = q['Nphi']\n",
-    "    Ntheta = q['Ntheta']\n",
+    "    m2d ,n2d      = q['m2d'],  q['n2d']\n",
+    "    dm2d,dn2d     = q['dm2d'], q['dn2d']\n",
+    "    Nphi          = q['Nphi']\n",
+    "    Ntheta        = q['Ntheta']\n",
     "\n",
     "    ## Calculate the linear growth rate between tinit and tend\n",
     "    tinit = q['tGR_init']\n",
@@ -172,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.8.11"
   },
   "orig_nbformat": 4
  },
