--- a/Estimate_nutheta.ipynb
+++ b/Estimate_nutheta.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -67,11 +67,20 @@
    ],
    "source": [
     "q05_v05  = hdf5_to_dict(\"data/q05_neo_v05.hdf5\") ;q05_v05['title']  = 'q05_v05' ; q05_v05['c'] = color_array[0]\n",
-    "q15_vm05 = hdf5_to_dict(\"data/q05_neo_vm05.hdf5\");q15_vm05['title'] = 'q15_vm05'; q15_vm05['c'] = color_array[1]\n",
+    "q05_v025 = hdf5_to_dict(\"data/q05_neo_v025.hdf5\");q05_v025['title'] = 'q05_v025'; q05_v025['c'] = color_array[1]\n",
+    "q05_vm05 = hdf5_to_dict(\"data/q05_neo_vm05.hdf5\");q05_vm05['title'] = 'q05_vm05'; q05_vm05['c'] = color_array[2]\n",
+    "q05_v1   = hdf5_to_dict(\"data/q05_neo_v1.hdf5\")  ;q05_v1['title']   = 'q05_v1'  ; q05_v1['c'] = color_array[3]\n",
+    "q05_vm1  = hdf5_to_dict(\"data/q05_neo_vm1.hdf5\") ;q05_vm1['title']  = 'q05_vm1' ; q05_vm1['c'] = color_array[4]\n",
+    "\n",
+    "q15_v05  = hdf5_to_dict(\"data/q15_neo_v05.hdf5\") ;q15_v05['title']  = 'q15_v05' ; q15_v05['c'] = color_array[5]\n",
+    "q15_v025 = hdf5_to_dict(\"data/q15_neo_v025.hdf5\");q15_v025['title'] = 'q15_v025'; q15_v025['c'] = color_array[6]\n",
+    "q15_vm05 = hdf5_to_dict(\"data/q15_neo_vm05.hdf5\");q15_vm05['title'] = 'q15_vm05'; q15_vm05['c'] = color_array[7]\n",
+    "q15_v1   = hdf5_to_dict(\"data/q15_neo_v1.hdf5\")  ;q15_v1['title']   = 'q15_v1'  ; q15_v1['c'] = color_array[8]\n",
+    "q15_vm1  = hdf5_to_dict(\"data/q15_neo_vm1.hdf5\") ;q15_vm1['title']  = 'q15_vm1' ; q15_vm1['c'] = color_array[9]\n",
     "\n",
     "print(q05_v05.keys())\n",
     "\n",
-    "all_sim = [q05_v05, q15_vm05]\n",
+    "all_sim = [q05_v1, q05_v05, q05_v025, q05_vm05, q05_vm1, q15_v1, q15_v05, q15_v025, q15_vm05, q15_vm1]\n",
     "\n",
     "## Definintion of custom widgets used in interactive plots\n",
     "custom_widgets = {'dpi_adjust' : widgets.IntSlider(min=30, max=200, step=1,value=dpi_custom, continuous_update=False),\n",
@@ -89,13 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "47c366a4b46b43fc978401c2cded7593",
+       "model_id": "008d1fb9fb83436c99722c17fcf72624",
        "version_major": 2,
        "version_minor": 0
       },
@@ -109,12 +118,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f227d0d70fda4c56b023d210a0f3c39c",
+       "model_id": "70f35c80ab4f410eb9a6b309b2203425",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=1, continuous_update=False, description='N', min=1), Text(value='dtVP', …"
+       "interactive(children=(Text(value='Er', continuous_update=False, description='Select parameter:', placeholder='…"
       ]
      },
      "metadata": {},
@@ -123,10 +132,10 @@
     {
      "data": {
       "text/plain": [
-       "<function __main__.update_plot(N, param, param2, float_range_rho, float_range_time, select_sim, dpi_adjust)>"
+       "<function __main__.update_plot(param, float_range_rho, float_range_time, select_sim, dpi_adjust)>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,10 +143,10 @@
    "source": [
     "plt.close('all')\n",
     "\n",
-    "fig = plt.figure(figsize=(12,6))\n",
-    "ax_tevol = fig.add_subplot(121); ax_reg = fig.add_subplot(122)\n",
+    "fig = plt.figure(figsize=(15,6))\n",
+    "ax_rprof = fig.add_subplot(131); ax_tevol = fig.add_subplot(132); ax_reg = fig.add_subplot(133)\n",
     "\n",
-    "def update_plot(N,param,param2,float_range_rho,float_range_time,\n",
+    "def update_plot(param,float_range_rho,float_range_time,\n",
     "                select_sim,dpi_adjust):\n",
     "\n",
     "    q_ar = [q for q in all_sim if q['title'] in select_sim]\n",
@@ -148,10 +157,10 @@
     "    fig.set_dpi(dpi_adjust)\n",
     "\n",
     "    ## Clear previous plot\n",
-    "    ax_tevol.clear()\n",
+    "    ax_tevol.clear(); ax_reg.clear(); ax_rprof.clear()\n",
     "\n",
     "    ## Set axes customizations\n",
-    "    ax_tevol.set_title(r'Radial profile (avg %.2f < $r/a$ < %.2f)' % (rhomin_avg , rhomax_avg) )\n",
+    "    ax_tevol.set_title(r'Temporal evolution (avg %.2f < $r/a$ < %.2f)' % (rhomin_avg , rhomax_avg) )\n",
     "    fig.suptitle(r'Study of %s' %param)\n",
     "    \n",
     "    for q in q_ar:\n",
@@ -159,10 +168,17 @@
     "        itmin_avg, itmax_avg = np.searchsorted(q['time'],[tmin_avg,tmax_avg])\n",
     "        irhomin, irhomax     = np.searchsorted(q['rho'],[rhomin_avg,rhomax_avg])\n",
     "\n",
+    "        ## Plot radial profile every 100 steps with a gradient of color\n",
+    "        for i in range(0,len(q['time']),10):\n",
+    "            c = plt.cm.RdYlBu_r(i/len(q['time']))\n",
+    "            ax_rprof.plot(q['rho'],q[param][i,:],c=c)\n",
+    "\n",
+    "        ## Plot temporal evolution\n",
     "        ax_tevol.plot(q['time'], np.mean( q[param][:,irhomin:irhomax],axis=1),c=q['c'],label=q['title'])\n",
     "        ax_tevol.axvline(x=q['time'][itmin_avg],c='k',ls='--')\n",
     "        ax_tevol.axvline(x=q['time'][itmax_avg],c='k',ls='--')\n",
     "\n",
+    "        ## Plot points in VP, dtVP space\n",
     "        ax_reg.plot( np.mean(q['VP'][itmin_avg,irhomin:irhomax],axis=0), np.mean(q['dtVP'][itmin_avg,irhomin:irhomax],axis=0), c=q['c'], marker='o', label=q['title'])\n",
     "        \n",
     "    ## Axes customizations\n",
