--- a/Estimate_nutheta.ipynb
+++ b/Estimate_nutheta.ipynb
@@ -118,7 +118,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "574fc65a0b34467d9e08fb54be85df5b",
+       "model_id": "a88678ded33d4ecea7933b4a98220188",
        "version_major": 2,
        "version_minor": 0
       },
@@ -132,12 +132,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f37bc7a342554e3b988803394647da88",
+       "model_id": "9686e1cc73884426903f0648706373b6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Text(value='VP', continuous_update=False, description='Select parameter:', placeholder='…"
+       "interactive(children=(Text(value='dtVP', continuous_update=False, description='Select parameter:', placeholder…"
       ]
      },
      "metadata": {},
@@ -215,6 +215,10 @@
     "        ax_tevol.axvline(x=q['time'][itmin_avg],c='k',ls='--')\n",
     "        ax_tevol.axvline(x=q['time'][itmax_avg],c='k',ls='--')\n",
     "\n",
+    "        # if iq==0:\n",
+    "        #     for it,t in enumerate(q['time'][itmin_avg:itmax_avg]):\n",
+    "        #         ax_tevol.axvline(x=t,c='k',ls='--',alpha=0.5)\n",
+    "\n",
     "        ## Append VP_x and dtVP_y for linear regression\n",
     "        VP_x = np.append(VP_x,np.mean(q['VP'][itmin_avg:itmax_avg,irhomin:irhomax],axis=(0,1)))\n",
     "        dtVP_y = np.append(dtVP_y,np.mean(q['dtVP'][itmin_avg:itmax_avg,irhomin:irhomax],axis=(0,1)))\n",
@@ -258,13 +262,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84686a65114f43b091984bfea41e7b18",
+       "model_id": "5fd3faa2968144b7a61751d78d6ad70f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -280,12 +284,12 @@
     "plt.close('all')\n",
     "\n",
     "q_ar = [q05_v1, q05_v05, q05_v025, q05_v0]\n",
-    "#q_ar = [q15_v1, q15_v05, q15_v025, q15_v0]\n",
+    "# q_ar = [q15_v05, q15_v025, q15_v0]\n",
     "\n",
     "fig = plt.figure(figsize=(18,8))\n",
     "\n",
     "tmin_avg  ,tmax_avg   = 40e3, 50e3\n",
-    "#tmin_avg  ,tmax_avg   = 80e3, 90e3\n",
+    "# tmin_avg  ,tmax_avg   = 80e3, 90e3\n",
     "rhomin_avg,rhomax_avg = 0.15, 0.85\n",
     "\n",
     "#VP_x = np.array([]); dtVP_y = np.array([])\n",
