--- a/Scan_Ip_Postdoc.ipynb
+++ b/Scan_Ip_Postdoc.ipynb
@@ -84,6 +84,7 @@
     "secondphase_newsim = widgets.Checkbox(value=False,description='Second phase of new simulation',layout=Layout(width='50%'))\n",
     "test_aligned_GC7   = widgets.Checkbox(value=False,description='Test - Aligned coordinate with 7 points for gyroavg',layout=Layout(width='50%'))\n",
     "aligned_sim        = widgets.Checkbox(value=True,description='Aligned simulation',layout=Layout(width='50%'))\n",
+    "ripple_sim         = widgets.Checkbox(value=False,description='Ripple simulation',layout=Layout(width='50%'))\n",
     "\n",
     "display(original_sim,neoclassical_sim,firstphase_newsim,secondphase_newsim,test_aligned_GC7,aligned_sim)\n",
     "\n",
@@ -197,6 +198,10 @@
     "\n",
     "    #all_sim.extend([qprof_05_br,qprof_05_alignedGC7,qprof_15_br,qprof_15_alignedGC7,qprof_05_br_2ndphase,qprof_15_br_2ndphase])\n",
     "    all_sim.extend([qprof_05_alignedGC7,qprof_15_alignedGC7])\n",
+    "\n",
+    "if ripple_sim.value:\n",
+    "    qprof_15_rippleTS_ns05 = hdf5_to_dict('data/TS45511_q15_rippleTS_ns05.hdf5') ; qprof_15_rippleTS_ns05['title'] = r'$q_{ref}^{TS} \\times 1.5$' ; qprof_15_rippleTS_ns05['c']='xkcd:blue' ; qprof_15_rippleTS_ns05['c2']='xkcd:azure' ; qprof_15_rippleTS_ns05['ls']='-'\n",
+    "    qprof_15_rippleTS_ns1 = hdf5_to_dict('data/TS45511_q15_rippleTS_ns1.hdf5')  ; qprof_15_rippleTS_ns1['title']  = r'$q_{ref}^{TS} \\times 1.5$' ; qprof_15_rippleTS_ns1['c']='xkcd:red'  ; qprof_15_rippleTS_ns1['c2']='xkcd:coral' ; qprof_15_rippleTS_ns1['ls']='-'\n",
     "\n",
     "print(all_sim[0].keys())\n",
     "\n",
