--- a/NC_theory_Nq_delta_nustar_space.ipynb
+++ b/NC_theory_Nq_delta_nustar_space.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "10a9a77e-db24-441c-9375-6aa0246a39ef",
    "metadata": {
     "jupyter": {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ce3ce581-fad6-468d-9ab5-8a47611b6783",
    "metadata": {
     "jupyter": {
@@ -2111,65 +2111,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d8fd0f1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "180.0\n",
+      "10.0\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bf160f39b9d94332a737be1529093f36",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E:\\Temp\\ipykernel_14260\\3739016260.py:35: MatplotlibDeprecationWarning: shading='flat' when X and Y have the same dimensions as C is deprecated since 3.3.  Either specify the corners of the quadrilaterals with X and Y, or pass shading='auto', 'nearest' or 'gouraud', or set rcParams['pcolor.shading'].  This will become an error two minor releases later.\n",
+      "  p = ax.pcolormesh(q_ar,nustar_ar,kE_map,cmap='RdYlBu_r')\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
     "plt.rc('font',size=20)\n",
-    "delta_ar  = np.array([0.005,0.01,0.03,0.06])\n",
-    "eps       = 0.15\n",
-    "DoE_ar    = delta_ar / eps\n",
-    "nustar_ar = [1e-4,1e-3,1e-2,1e-1,1e0,1e1,1e2,1e3]\n",
-    "nustar_ar = np.logspace(-2, 2, 20)\n",
+    "plt.rcParams['axes.formatter.limits'] = (-5,5)\n",
+    "plt.rcParams.update({\"axes.grid\" : False})\n",
+    "\n",
+    "delta  = 0.005\n",
+    "eps       = 0.3\n",
+    "DoE    = delta / eps\n",
+    "nustar_ar = np.logspace(-2, 1, 100)\n",
     "N         = 18\n",
-    "q         = 3\n",
-    "Nq        = N * q\n",
+    "q_ar      = np.linspace(1,10,100)\n",
+    "Nq_ar     = N * q_ar\n",
     "\n",
-    "color_ar = ['r','g','b','darkorange','purple','steelblue','turquoise']\n",
+    "print(Nq_ar[-1])\n",
+    "print(nustar_ar[-1])\n",
     "\n",
-    "color_ar = plt.cm.winter(np.linspace(0,1,len(delta_ar)))\n",
+    "fig = plt.figure(figsize=(12,6))#; fig.suptitle(r'$\\\\varepsilon$ = %s | $N$ = %s | $q$ = %s' % (eps,N,q),fontsize=26)\n",
+    "ax = fig.add_subplot(111)\n",
     "\n",
-    "fig = plt.figure(figsize=(12,16)); fig.suptitle(r'$\\varepsilon$ = %s | $N$ = %s | $q$ = %s' % (eps,N,q),fontsize=26)\n",
-    "ax_kT = fig.add_subplot(311); ax_kT.set_ylabel(r'$k_{V_T}$',fontsize=26)\n",
-    "ax_kE = fig.add_subplot(312); ax_kE.set_ylabel(r'$k_N$',fontsize=26)\n",
-    "ax_kP = fig.add_subplot(313); ax_kP.set_ylabel(r'$k_{V_P}$',fontsize=26)\n",
+    "kE_map = np.zeros((len(nustar_ar),len(Nq_ar)))\n",
     "\n",
-    "for iDoE,DoE in enumerate(DoE_ar):     \n",
-    "    kT_ar,kE_ar,kP_ar = (np.array([]) for i in range(3) )\n",
-    "    kT_ar_mod,kE_ar_mod,kP_ar_mod = (np.array([]) for i in range(3) )\n",
+    "#Check if 'Figures/kE_map.npy' exists\n",
+    "if os.path.isfile('Figures/kE_map_delta%s_eps%s.npy' % (delta,eps)):\n",
+    "    kE_map = np.load('Figures/kE_map_delta%s_eps%s.npy' % (delta,eps))\n",
+    "\n",
+    "else:\n",
     "    for inu,nustar in enumerate(nustar_ar):\n",
-    "        kT_mod,kE_mod,kP_mod = kT_kE_kP_new(DoE, nustar, Nq)\n",
+    "        for iNq,Nq in enumerate(Nq_ar):     \n",
+    "            kE_map[inu,iNq] = kT_kE_kP_new(DoE, nustar, Nq)[1]\n",
     "\n",
-    "        kT_ar_mod  = np.append(kT_ar_mod, kT_mod)\n",
-    "        kE_ar_mod  = np.append(kE_ar_mod, kE_mod)      \n",
-    "        kP_ar_mod  = np.append(kP_ar_mod, kP_mod)\n",
-    "    \n",
-    "    ax_kT.semilogx(nustar_ar, kT_ar_mod,color=color_ar[iDoE], ls='-', label=r'$\\delta = %.1e$' % (DoE*eps), lw=4)\n",
-    "    ax_kE.semilogx(nustar_ar, kE_ar_mod,color=color_ar[iDoE], ls='-', label=r'$\\delta = %.1e$' % (DoE*eps), lw=4)\n",
-    "    ax_kP.semilogx(nustar_ar, kP_ar_mod,color=color_ar[iDoE], ls='-', label=r'$\\delta = %.1e$' % (DoE*eps), lw=4)\n",
-    "        \n",
-    "#for axes in [ax_kT]:\n",
-    "for axes in [ax_kT,ax_kE,ax_kP]:\n",
-    "    handles, labels = axes.get_legend_handles_labels()\n",
-    "    by_label = dict(zip(labels, handles))\n",
-    "    axes.legend(by_label.values(), by_label.keys(),ncol=2,fontsize=17)\n",
-    "for axes in [ax_kT,ax_kE,ax_kP]:\n",
-    "    axes.axhline(y=0,c='k',ls='--',lw=3)\n",
-    "    axes.set_xlabel(r'$\\nu_\\star$',fontsize=20)\n",
-    "    \n",
-    "#Asymptotic regimes\n",
-    "ax_kT.axhline(y=1.67,c='r',ls='-')\n",
-    "ax_kT.axhline(y=3.54,c='r',ls='-')\n",
-    "ax_kT.axhline(y=0,c='r',ls='-')\n",
+    "    print(kE_map)\n",
     "\n",
-    "ax_kE.axhline(y=1.5,c='r',ls='-')\n",
-    "ax_kE.axhline(y=3.37,c='r',ls='-')\n",
+    "np.save('Figures/kE_map_delta%s_eps%s.npy' % (delta,eps),kE_map)\n",
     "\n",
-    "ax_kP.axhline(y=1.17,c='r',ls='-')\n",
-    "ax_kP.axhline(y=-2.37,c='r',ls='-')\n",
-    "ax_kP.axhline(y=-0.5,c='r',ls='-')\n",
-    "    \n",
+    "p = ax.pcolormesh(q_ar,nustar_ar,kE_map,cmap='RdYlBu_r')\n",
+    "## Add countour lines where values appears\n",
+    "levels = np.linspace(1.53, 3.25, 6)\n",
+    "CS = ax.contour(q_ar,nustar_ar,kE_map, levels, colors='k', origin='lower',linewidths=2)\n",
+    "ax.clabel(CS, levels, inline=True, fontsize=14)\n",
+    "cbar = fig.colorbar(p,ax=ax)\n",
+    "\n",
+    "ax.set_yscale('log')\n",
+    "\n",
+    "ax.set_xlabel(r'$q$',fontsize=20)\n",
+    "ax.set_ylabel(r'$\\nu_\\star$',fontsize=20)\n",
+    "\n",
+    "## Add a text box with white background and black border\n",
+    "ax.text(0.05, 0.95, r'$\\delta$ = %s | $\\varepsilon$ = %s | $N$ = %s' % (delta,eps,N), transform=ax.transAxes, fontsize=20,\n",
+    "        verticalalignment='top', bbox=dict(boxstyle='round', facecolor='white', alpha=1))\n",
+    "\n",
     "fig.tight_layout()"
    ]
   },
@@ -3305,7 +3332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
