--- a/Experimental_profiles.ipynb
+++ b/Experimental_profiles.ipynb
@@ -488,7 +488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color='green'>**(EPS Laure)** </font> <font color='coral'>**Plotting $k_E$ profile for experimental discharges ** </font> <font color='red'> (with new data!) </font>"
+    "## <font color='green'>**(EPS Laure)** </font> <font color='coral'>Plotting $k_E$ profile for experimental discharges </font> <font color='red'> (with new data!) </font>"
    ]
   },
   {
@@ -688,73 +688,6 @@
     "\n",
     "fig.tight_layout()"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## <font color='coral'>**(Maybe not useful) Differentiating TS and WEST ripple** </font>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.00266652018677839\n"
-     ]
-    }
-   ],
-   "source": [
-    "def calculate_ripple_amplitude_TS(rho, theta):\n",
-    "    # Paramètres Tore Supra\n",
-    "    R0    = 2.3946       #Grand rayon\n",
-    "    Eps   = 3.2          #Rapport d'aspect\n",
-    "    a     = R0/Eps       #Petit rayon\n",
-    "    N     = 18           #Nombre de bobines\n",
-    "    Eps_b = 1.267/2.3946 #Rapport du diamètre moyen des bobines sur le grand rayon\n",
-    "    L0 = 0.5*R0* ( 1 - np.sqrt(1 - 2*(Eps_b**2) ) )   #cf Rapport de stage Varennes 2018\n",
-    "    delta_n = 9.8559e-5 #Paramètre ajusté pour coller au mieux à la thèse de Grua pour N=18\n",
-    "\n",
-    "    # Calcul de l'amplitude ripple\n",
-    "    r = rho*a\n",
-    "    cos = np.cos(theta)\n",
-    "    R = R0 + r*cos\n",
-    "    rprime = np.sqrt( 2*(R0-L0)* ( R - np.sqrt(R**2 - r**2 - L0**2 - 2*r*L0*cos) ) )\n",
-    "    ripple_TS_amp = delta_n * special.iv(0, N * rprime / (R0-L0) ) #special.iv(0,x) : fonction de Bessel modifiée de première espèce d'ordre 0\n",
-    "    \n",
-    "    return ripple_TS_amp\n",
-    "\n",
-    "def TS_ripple_FSavg(rho):\n",
-    "    # Paramètres Tore Supra\n",
-    "    R0    = 2.3946       #Grand rayon\n",
-    "    Eps   = 3.2          #Rapport d'aspect\n",
-    "    a     = R0/Eps       #Petit rayon\n",
-    "    N     = 18           #Nombre de bobines\n",
-    "    Eps_b = 1.267/2.3946 #Rapport du diamètre moyen des bobines sur le grand rayon\n",
-    "    L0 = 0.5*R0* ( 1 - np.sqrt(1 - 2*(Eps_b**2) ) )   #cf Rapport de stage Varennes 2018\n",
-    "    delta_n = 9.8559e-5 #Paramètre ajusté pour coller au mieux à la thèse de Grua pour N=18\n",
-    "\n",
-    "    # Calcul de l'amplitude ripple\n",
-    "    r = rho*a\n",
-    "    theta_ar = np.linspace(0,2*np.pi,100)\n",
-    "    ripple_TS_amp = np.zeros(len(theta_ar))\n",
-    "    for ith,theta in enumerate(theta_ar):\n",
-    "        cos = np.cos(theta)\n",
-    "        R = R0 + r*cos\n",
-    "        rprime = np.sqrt( 2*(R0-L0)* ( R - np.sqrt(R**2 - r**2 - L0**2 - 2*r*L0*cos) ) )\n",
-    "        ripple_TS_amp[ith] = delta_n * special.iv(0, N * rprime / (R0-L0) ) \n",
-    "    return np.mean(ripple_TS_amp,axis=0)\n",
-    "\n",
-    "print(TS_ripple_FSavg(0.5))\n",
-    "\n",
-    "rho_ar = np.linspace(0.1,1.0,100)\n"
-   ]
   }
  ],
  "metadata": {
@@ -773,7 +706,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.8.11"
   },
   "orig_nbformat": 4
  },
