--- a/S3X_simulations_study.ipynb
+++ b/S3X_simulations_study.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,9 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['T_FSavg', 'VExB_th_FSavg', 'n_FSavg', 'phi_FSavg', 'time', 'title', 'c', 'ls', 'time_activation'])\n",
+      "633453.3044180159\n"
+     ]
+    }
+   ],
    "source": [
     "## Load simulation where we restart at t=633453.304418016 changing Bpol from 1 to 2\n",
     "#S3X_data = hdf5_to_dict('data_S3X/data_allsim.h5'); S3X_data['title']=r'Restart $B_{pol}=2'; S3X_data['c']='xkcd:pinky red'; S3X_data['ls']='-'; S3X_data['time_activation']=633453.304418016\n",
@@ -106,9 +115,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6dad5390a6e1448f8ff2ed1e636f681b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a30c7ebbf1dd4fe69310f760c11b1811",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Select(description='keys', index=1, layout=Layout(height='220px', width='50%'), options=…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.update_plot(keys, it_play, time_slider)>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fig = plt.figure(figsize=(10,8))\n",
     "ax = fig.add_subplot(111)\n",
@@ -140,7 +188,7 @@
     "time_widget = widgets.FloatSlider(min=S3X_data['time'].min(), max=S3X_data['time'].max(), step=1, value=0.0, continuous_update=True, layout=Layout(width='50%', height='220px'))\n",
     "\n",
     "slider = widgets.IntSlider(value=0,min=0,max=len(S3X_data['time']),step=1,description=\"Time index\",layout=Layout(width='50%'))\n",
-    "play   = widgets.Play(value=785,min=0, max=len(S3X_data['time']),step=1,interval=200,description=\"Press play\")\n",
+    "play   = widgets.Play(value=1,min=0, max=len(S3X_data['time']),step=1,interval=200,description=\"Press play\")\n",
     "\n",
     "widgets.jslink((play, 'value'), (slider, 'value'))\n",
     "\n",
@@ -162,9 +210,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "83d50e3cc4734d8287102f322ef4890d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3c2fed17517d4ddfb4e0d15a6c34d0ca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Play(value=0, description='Press play', interval=200, max=70), IntSlider(value=0, descri…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.update_plot(it_play, time_slider)>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fig = plt.figure(figsize=(18,9))\n",
     "\n",
@@ -222,9 +309,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bb18aebf3c25458999374bb949b34ddc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "fig = plt.figure(figsize=(18,9))\n",
     "\n",
@@ -266,9 +368,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e3041881e2e343a19a00c06925ad4c55",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "fig = plt.figure(figsize=(18,9))\n",
     "\n",
@@ -312,9 +429,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7c5c451834c041c99fb0b0af11746914",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "S3X_data     = hdf5_to_dict('data_S3X/data_allsim.h5'); S3X_data['title']=r'Restart $B_{pol}=2'; S3X_data['c']='xkcd:pinky red'; S3X_data['ls']='-'; S3X_data['time_activation']=633453.304418016; S3X_data['Lphidiv']=4\n",
     "S3X_data_new = hdf5_to_dict('data_S3X/data_allsim_new.h5'); S3X_data_new['title']=r'Restart $B_{pol}=2'; S3X_data_new['c']='xkcd:pinky red'; S3X_data_new['ls']='-'; S3X_data['time_activation']=633453.304418016; S3X_data_new['Lphidiv']=8\n",
@@ -385,9 +517,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8d34856ad1d74cb5933a0f13aefdf20e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "S3X_data     = hdf5_to_dict('data_S3X/data_allsim.h5'); S3X_data['title']=r'Restart $B_{pol}=2'; S3X_data['c']='xkcd:pinky red'; S3X_data['ls']='-'; S3X_data['time_activation']=633453.304418016; S3X_data['Lphidiv']=4\n",
     "S3X_data_new = hdf5_to_dict('data_S3X/data_allsim_new.h5'); S3X_data_new['title']=r'Restart $B_{pol}=2'; S3X_data_new['c']='xkcd:pinky red'; S3X_data_new['ls']='-'; S3X_data_new['time_activation']=633453.304418016; S3X_data_new['Lphidiv']=8\n",
@@ -452,9 +599,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3234a534db3347d893ce129d1dfa6eff",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lphidiv4\n",
+      "Lphidiv8\n",
+      "Lphidiv4 redo\n"
+     ]
+    }
+   ],
    "source": [
     "S3X_data     = hdf5_to_dict('data_S3X/data_allsim.h5'); S3X_data['title']=r'Lphidiv4'; S3X_data['c']='xkcd:red'; S3X_data['ls']='-'; S3X_data['time_activation']=633453.304418016; S3X_data['Lphidiv']=4\n",
     "S3X_data_new = hdf5_to_dict('data_S3X/data_allsim_new.h5'); S3X_data_new['title']=r'Lphidiv8'; S3X_data_new['c']='xkcd:blue'; S3X_data_new['ls']='--'; S3X_data_new['Lphidiv']=8\n",
