--- a/NC_theory_Nq_delta_nustar_space_reduced.ipynb
+++ b/NC_theory_Nq_delta_nustar_space_reduced.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# **Compute neoclassical theory with ripple with only $N_c q$, $\\delta$, $\\varepsilon$ and $\\nu_\\star$**\n",
     "\n",
-    "Note: This is a reduced version of a script containing more information"
+    "Note: This is a reduced & more readable version of a script containing more information"
    ]
   },
   {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "10a9a77e-db24-441c-9375-6aa0246a39ef",
    "metadata": {
     "jupyter": {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ce3ce581-fad6-468d-9ab5-8a47611b6783",
    "metadata": {
     "jupyter": {
@@ -108,12 +108,12 @@
     "tags": []
    },
    "source": [
-    "## <font color='purple'> **Definition** </font> - Transport coefficients and $\\nu_\\varphi$"
+    "## <font color='purple'> **Definition** </font> - Transport coefficients $k_E$, $k_P$, $k_T$ and $\\nu_\\varphi$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "08689366-48f0-4ff1-a08a-23ee1ca5bce2",
    "metadata": {
     "jupyter": {
@@ -618,7 +618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
