--- a/S3X_simulations_study.ipynb
+++ b/S3X_simulations_study.ipynb
@@ -309,13 +309,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb18aebf3c25458999374bb949b34ddc",
+       "model_id": "ccbd12a9c2c1424d97d029217de77261",
        "version_major": 2,
        "version_minor": 0
       },
@@ -368,13 +368,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3041881e2e343a19a00c06925ad4c55",
+       "model_id": "82c5489577144d2eb1e9ae9ef1e087b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -429,13 +429,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c5c451834c041c99fb0b0af11746914",
+       "model_id": "0b61b638ac724e11a0db79c603c885b6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -517,13 +517,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d34856ad1d74cb5933a0f13aefdf20e",
+       "model_id": "d2919979ce044b6784e6005290c7e810",
        "version_major": 2,
        "version_minor": 0
       },
@@ -536,10 +536,15 @@
     }
    ],
    "source": [
+    "clear_output()\n",
+    "\n",
     "S3X_data     = hdf5_to_dict('data_S3X/data_allsim.h5'); S3X_data['title']=r'Restart $B_{pol}=2'; S3X_data['c']='xkcd:pinky red'; S3X_data['ls']='-'; S3X_data['time_activation']=633453.304418016; S3X_data['Lphidiv']=4\n",
     "S3X_data_new = hdf5_to_dict('data_S3X/data_allsim_new.h5'); S3X_data_new['title']=r'Restart $B_{pol}=2'; S3X_data_new['c']='xkcd:pinky red'; S3X_data_new['ls']='-'; S3X_data_new['time_activation']=633453.304418016; S3X_data_new['Lphidiv']=8\n",
     "\n",
-    "fig = plt.figure(figsize=(18,9))\n",
+    "S3X_data_test = hdf5_to_dict('data_S3X/data_test.h5'); S3X_data_test['title']=r'Lphidiv4 redo'; S3X_data_test['c']='xkcd:green'; S3X_data_test['ls']='-.'; S3X_data_test['Lphidiv']='8'\n",
+    "\n",
+    "\n",
+    "fig = plt.figure(figsize=(18,14))\n",
     "\n",
     "keys_ar = ['T_FSavg', 'VExB_th_FSavg', 'n_FSavg', 'phi_FSavg']\n",
     "ax_ar = []\n",
@@ -561,10 +566,13 @@
     "\n",
     "    ax.plot(rho_ar, S3X_data[keys][itscan,:], c='r', ls='-', label=r'$t=%.2e  - Lphidiv = %s$' % (tscan,S3X_data['Lphidiv']))\n",
     "    ax.plot(rho_ar, S3X_data_new[keys][-1,:], c='r', ls='--', label=r'$t=%.2e  - Lphidiv = %s$' % (tscan,S3X_data_new['Lphidiv']))\n",
+    "    ax.plot(rho_ar, S3X_data_test[keys][-1,:], c='g', ls='-.', label=r'$t=%.2e  - Lphidiv = %s$' % (666100,S3X_data_test['Lphidiv']))\n",
     "\n",
     "    ax.legend(fontsize=12, ncol=1)\n",
+    "    #ax.set_ylim(np.amin(S3X_data[keys])*1.1, np.amax(S3X_data[keys])*1.1)\n",
     "\n",
     "    if keys == 'phi_FSavg':\n",
+    "        ax.set_ylim(-30,80)\n",
     "        ax.legend(fontsize=12, ncol=1, loc='upper left')\n",
     "        ## add an ax inset to zoom in on the phi_FSavg\n",
     "        axins = ax.inset_axes([0.55, 0.5, 0.4, 0.4])\n",
@@ -584,8 +592,8 @@
     "    ax.axvline(x=1, c='k', ls='--')\n",
     "    \n",
     "\n",
-    "    ax.set_ylim(np.amin(S3X_data[keys])*1.1, np.amax(S3X_data[keys])*1.1)\n",
-    "\n",
+    "    \n",
+    "    \n",
     "fig.tight_layout()"
    ]
   },
@@ -599,13 +607,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3234a534db3347d893ce129d1dfa6eff",
+       "model_id": "859efb68b4394c12a3aec6466f2fbf62",
        "version_major": 2,
        "version_minor": 0
       },
@@ -627,6 +635,8 @@
     }
    ],
    "source": [
+    "clear_output()\n",
+    "\n",
     "S3X_data     = hdf5_to_dict('data_S3X/data_allsim.h5'); S3X_data['title']=r'Lphidiv4'; S3X_data['c']='xkcd:red'; S3X_data['ls']='-'; S3X_data['time_activation']=633453.304418016; S3X_data['Lphidiv']=4\n",
     "S3X_data_new = hdf5_to_dict('data_S3X/data_allsim_new.h5'); S3X_data_new['title']=r'Lphidiv8'; S3X_data_new['c']='xkcd:blue'; S3X_data_new['ls']='--'; S3X_data_new['Lphidiv']=8\n",
     "\n",
@@ -635,7 +645,8 @@
     "all_sim = [S3X_data, S3X_data_new, S3X_data_test]\n",
     "\n",
     "fig = plt.figure(figsize=(18,9))\n",
-    "fig.suptitle('Time evolution', fontsize=30)\n",
+    "rhoscan = 0.95\n",
+    "fig.suptitle(r'Time evolution at $r/a = $%s' % rhoscan, fontsize=30)\n",
     "\n",
     "keys_ar = ['T_FSavg', 'VExB_th_FSavg', 'n_FSavg', 'phi_FSavg']\n",
     "ax_ar = []\n",
@@ -650,9 +661,9 @@
     "        ax=ax_ar[ikey]\n",
     "\n",
     "        irho = np.argmin(np.abs(rho_ar - 0.75))\n",
-    "        irho2 = np.argmin(np.abs(rho_ar - 0.95))\n",
+    "        irho2 = np.argmin(np.abs(rho_ar - rhoscan))\n",
     "\n",
-    "        ax.plot(all_sim[isim]['time'], all_sim[isim][keys][:,irho2], c=all_sim[isim]['c'], ls=all_sim[isim]['ls'], label=r'$r/a = %.2f$ - Lphidiv = %s' % (rho_ar[irho], all_sim[isim]['Lphidiv']) )\n",
+    "        ax.plot(all_sim[isim]['time'], all_sim[isim][keys][:,irho2], c=all_sim[isim]['c'], ls=all_sim[isim]['ls'], label=r'$r/a = %.2f$ - Lphidiv = %s' % (rho_ar[irho2], all_sim[isim]['Lphidiv']) )\n",
     "        #ax.plot(S3X_data_new['time'], S3X_data_new[keys][:,irho], c='r', ls='--', label=r'$r/a = %.2f$ - Lphidiv = %s' % (rho_ar[irho], S3X_data_new['Lphidiv']) )\n",
     "\n",
     "        # ax.plot(S3X_data['time'], S3X_data[keys][:,irho2], c='b', ls='-', label=r'$r/a = %.2f$ - Lphidiv = %s' % (rho_ar[irho2], S3X_data['Lphidiv']) )\n",
@@ -664,12 +675,12 @@
     "        ax.axvline(x=S3X_data['time_activation'], c='g', ls='--')\n",
     "        ## Add text next to the line oriented at 90 degrees\n",
     "        ymin, ymax = ax.get_ylim()\n",
-    "        if ikey==0:ax.text(S3X_data['time_activation'], (ymin+ymax)/2 , r'$t_{switch~Bpol}$', rotation=90, verticalalignment='center', \n",
+    "        if ikey==0 and isim==0:ax.text(S3X_data['time_activation'], (ymin+ymax)/2 , r'$t_{switch~Bpol}$', rotation=90, verticalalignment='center', \n",
     "                horizontalalignment='right', fontsize=12, color='g', bbox=dict(facecolor='white', edgecolor='g', alpha=0.5))\n",
-    "\n",
+    "        ax.set_xlim(left=550000)\n",
     "    ax.legend(fontsize=12, ncol=2)\n",
     "\n",
-    "    ax.set_xlim(left=550000)\n",
+    "    \n",
     "\n",
     "    #ax.set_ylim(np.amin(S3X_data[keys])*1.1, np.amax(S3X_data[keys])*1.1)\n",
     "\n",
